# officecharts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
officecharts/: __init__.py  clipboard.py  container.py  drawingml.py  embedded_workbook.py  test.py  themes.py  utilities.py  xml_chart.py  xml_colours.py  xml_drawing.py  xml_relationships.py  xml_styles.py  xml_themes.py
officecharts/src/: windows_clipboard.cpp
src/: mac_clipboard.mm  test.py  windows_clipboard.cpp
src/lib/: mac_clipboard.mm  mac_clipboard_cpython.mm  windows_clipboard_cpython.cpp
src/officecharts/: __init__.py  clipboard.py  container.py  create.py  drawingml.py  test.py  themes.py  xml_colours.py  xml_drawing.py  xml_linechart.py  xml_relationships.py  xml_styles.py  xml_themes.py
src/officecharts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
