[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "officecharts"
version = "1.0"
authors = [
    { name = "Michael Allen", email = "michael@velofrog.com" }
]
description = "Create Office Graphic Charts from Python"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pandas", "XlsxWriter", "python-dateutil", "matplotlib"
]
